Add SceneReasoningConfig dataclass to scene_reasoning.py

--- a/VLM_VQA_Research.ipynb
+++ b/VLM_VQA_Research.ipynb
@@ -2425,7 +2425,26 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "import math\n",
+    "from dataclasses import dataclass, field\n",
     "from typing import Optional, Tuple, Dict\n",
+    "\n",
+    "\n",
+    "@dataclass\n",
+    "class SceneReasoningConfig:\n",
+    "    \"\"\"Configuration for Scene Reasoning Module.\"\"\"\n",
+    "    hidden_dim: int = 768\n",
+    "    num_heads: int = 12\n",
+    "    num_layers: int = 2\n",
+    "    mlp_ratio: float = 4.0\n",
+    "    dropout: float = 0.1\n",
+    "    use_spatial_encoding: bool = True\n",
+    "    use_relation_attention: bool = True\n",
+    "    spatial_dim: int = 64\n",
+    "    max_positions: int = 24\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def from_dict(cls, d: Dict) -> 'SceneReasoningConfig':\n",
+    "        return cls(**{k: v for k, v in d.items() if k in cls.__dataclass_fields__})\n",
     "\n",
     "\n",
     "class SpatialPositionEncoding(nn.Module):\n",
@@ -2773,6 +2792,7 @@
     "        use_spatial_encoding: bool = True,\n",
     "        use_relation_attention: bool = True,\n",
     "        spatial_dim: int = 64,\n",
+    "        config: Optional[SceneReasoningConfig] = None,\n",
     "    ):\n",
     "        \"\"\"\n",
     "        Initialize Scene Reasoning Module.\n",
@@ -2786,8 +2806,20 @@
     "            use_spatial_encoding: Enable 2D spatial position encodings\n",
     "            use_relation_attention: Enable relation-aware attention\n",
     "            spatial_dim: Spatial encoding dimension\n",
+    "            config: Optional SceneReasoningConfig (overrides other params if provided)\n",
     "        \"\"\"\n",
     "        super().__init__()\n",
+    "        \n",
+    "        # If config provided, use its values\n",
+    "        if config is not None:\n",
+    "            hidden_dim = config.hidden_dim\n",
+    "            num_heads = config.num_heads\n",
+    "            num_layers = config.num_layers\n",
+    "            mlp_ratio = config.mlp_ratio\n",
+    "            dropout = config.dropout\n",
+    "            use_spatial_encoding = config.use_spatial_encoding\n",
+    "            use_relation_attention = config.use_relation_attention\n",
+    "            spatial_dim = config.spatial_dim\n",
     "        \n",
     "        self.hidden_dim = hidden_dim\n",
     "        self.use_spatial_encoding = use_spatial_encoding\n",
