Fix: Move config to first parameter in SceneReasoningModule.__init__

--- a/VLM_VQA_Research.ipynb
+++ b/VLM_VQA_Research.ipynb
@@ -2896,6 +2896,7 @@
     "    \n",
     "    def __init__(\n",
     "        self,\n",
+    "        config: Optional[SceneReasoningConfig] = None,\n",
     "        hidden_dim: int = 768,\n",
     "        num_heads: int = 8,\n",
     "        num_layers: int = 2,\n",
@@ -2904,12 +2905,12 @@
     "        use_spatial_encoding: bool = True,\n",
     "        use_relation_attention: bool = True,\n",
     "        spatial_dim: int = 64,\n",
-    "        config: Optional[SceneReasoningConfig] = None,\n",
     "    ):\n",
     "        \"\"\"\n",
     "        Initialize Scene Reasoning Module.\n",
     "        \n",
     "        Args:\n",
+    "            config: Optional SceneReasoningConfig (if provided, overrides other params)\n",
     "            hidden_dim: Hidden dimension (should match vision encoder output)\n",
     "            num_heads: Number of attention heads\n",
     "            num_layers: Number of reasoning layers\n",
@@ -2918,7 +2919,6 @@
     "            use_spatial_encoding: Enable 2D spatial position encodings\n",
     "            use_relation_attention: Enable relation-aware attention\n",
     "            spatial_dim: Spatial encoding dimension\n",
-    "            config: Optional SceneReasoningConfig (overrides other params if provided)\n",
     "        \"\"\"\n",
     "        super().__init__()\n",
     "        \n",
