Fix: Rename src/datasets to src/data to avoid HuggingFace datasets conflict

--- a/VLM_VQA_Research.ipynb
+++ b/VLM_VQA_Research.ipynb
@@ -275,7 +275,7 @@
     "    \"configs\",\n",
     "    \"data\",\n",
     "    \"src\",\n",
-    "    \"src/datasets\",\n",
+    "    \"src/data\",\n",
     "    \"src/models\", \n",
     "    \"src/training\",\n",
     "    \"src/evaluation\",\n",
@@ -298,7 +298,7 @@
     "# ============================================================================\n",
     "init_packages = [\n",
     "    \"src\",\n",
-    "    \"src/datasets\",\n",
+    "    \"src/data\",\n",
     "    \"src/models\",\n",
     "    \"src/training\",\n",
     "    \"src/evaluation\",\n",
@@ -1302,7 +1302,7 @@
    "outputs": [],
    "source": [
     "# ============================================================================\n",
-    "# FILE: src/datasets/vqa_dataset.py\n",
+    "# FILE: src/data/vqa_dataset.py\n",
     "# VQA Dataset implementation with HuggingFace integration\n",
     "# ============================================================================\n",
     "\n",
@@ -1612,7 +1612,7 @@
     "    return train_loader, val_loader\n",
     "'''\n",
     "\n",
-    "write_file(\"src/datasets/vqa_dataset.py\", vqa_dataset_py_content)"
+    "write_file(\"src/data/vqa_dataset.py\", vqa_dataset_py_content)"
    ]
   },
   {
@@ -1633,7 +1633,7 @@
    "outputs": [],
    "source": [
     "# ============================================================================\n",
-    "# FILE: src/datasets/answer_vocab.py\n",
+    "# FILE: src/data/answer_vocab.py\n",
     "# Answer normalization and vocabulary utilities\n",
     "# ============================================================================\n",
     "\n",
@@ -1886,7 +1886,7 @@
     "    }\n",
     "'''\n",
     "\n",
-    "write_file(\"src/datasets/answer_vocab.py\", answer_vocab_py_content)"
+    "write_file(\"src/data/answer_vocab.py\", answer_vocab_py_content)"
    ]
   },
   {
@@ -7147,7 +7147,7 @@
     "print(\"\\n📊 MODULE SUMMARY:\")\n",
     "print(\"-\"*70)\n",
     "print(\"   src/utils/     - Configuration, logging, checkpointing, seeding\")\n",
-    "print(\"   src/datasets/  - VQA dataset loader, answer vocabulary\")\n",
+    "print(\"   src/data/      - VQA dataset loader, answer vocabulary\")\n",
     "print(\"   src/models/    - BLIP-2 wrapper, VQA head, Scene Reasoning Module\")\n",
     "print(\"   src/training/  - Trainer, losses, metrics, schedulers\")\n",
     "print(\"   src/evaluation/- Evaluation pipeline, error analysis\")\n",
